--- a/scrapapp.webui/scrapapp.webui.csproj
+++ b/scrapapp.webui/scrapapp.webui.csproj
@@ -4,18 +4,20 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.7">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.7"/>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7"/>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\scrapapp.business\scrapapp.business.csproj"/>
-    <ProjectReference Include="..\scrapapp.entity\scrapapp.entity.csproj"/>
-    <ProjectReference Include="..\scrapapp.data\scrapapp.data.csproj"/>
+    <ProjectReference Include="..\scrapapp.entity\scrapapp.entity.csproj" />
+    <ProjectReference Include="..\scrapapp.data\scrapapp.data.csproj" />
+    <ProjectReference Include="..\scrapapp.business\scrapapp.business.csproj" />
   </ItemGroup>
 </Project>
