Refactoring process phase 1.

--- a/scrapapp.webui/appsettings.json
+++ b/scrapapp.webui/appsettings.json
@@ -18,7 +18,7 @@
     "Users": [
       {
         "username": "adminuser",
-        "password": "Scrap0102.",
+        "password": "Scrap0102",
         "email": "adminuser@scrapapp.com",
         "role": "admin",
         "firstName": "Deniz",
@@ -26,7 +26,7 @@
       },
       {
         "username": "ozkanozcan",
-        "password": "Scrap0102.",
+        "password": "Scrap0102",
         "email": "ozkanozcan@scrapapp.com",
         "role": "customer",
         "firstName": "Özkan",
@@ -34,7 +34,7 @@
       },
       {
         "username": "ozgurozcan",
-        "password": "Scrap0102.",
+        "password": "Scrap0102",
         "email": "ozgurozcan@scrapapp.com",
         "role": "customer",
         "firstName": "Özgür",
@@ -46,6 +46,6 @@
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=db.sqlite3",
     "MySqlConnection": "",
-    "MsSqlConnection": "server=.\\sqlexpress;database=scrapappdb;integrated security=SSPI;"
+    "SQLServerConnection": "server=.\\sqlexpress;database=scrapappdb;integrated security=SSPI;"
   }
 }
