Refactoring process phase 1.

--- a/scrapapp.webui/appsettings.json
+++ b/scrapapp.webui/appsettings.json
@@ -14,29 +14,29 @@
     "Password": "<password>"
   },
   "Data": {
-    "Roles": ["admin", "customer"],
+    "Roles": ["Admin", "Customer","Stuff"],
     "Users": [
       {
         "username": "adminuser",
-        "password": "Scrap0102",
+        "password": "Scrap0102.",
         "email": "adminuser@scrapapp.com",
-        "role": "admin",
+        "role": "Admin",
         "firstName": "Deniz",
         "lastName": "Özcan"
       },
       {
-        "username": "ozkanozcan",
-        "password": "Scrap0102",
-        "email": "ozkanozcan@scrapapp.com",
-        "role": "customer",
+        "username": "customeruser",
+        "password": "Scrap0102.",
+        "email": "customeruser@scrapapp.com",
+        "role": "Customer",
         "firstName": "Özkan",
         "lastName": "Özcan"
       },
       {
-        "username": "ozgurozcan",
-        "password": "Scrap0102",
-        "email": "ozgurozcan@scrapapp.com",
-        "role": "customer",
+        "username": "stuffuser",
+        "password": "Scrap0102.",
+        "email": "customeruser2@scrapapp.com",
+        "role": "Stuff",
         "firstName": "Özgür",
         "lastName": "Özcan"
       }
