Refactoring Process Phase 1.3

--- a/scrapapp.webui/appsettings.json
+++ b/scrapapp.webui/appsettings.json
@@ -17,7 +17,7 @@
     "Roles": ["Admin", "Customer","Stuff"],
     "Users": [
       {
-        "username": "adminuser",
+        "username": "admin",
         "password": "Scrap0102.",
         "email": "adminuser@scrapapp.com",
         "role": "Admin",
@@ -25,7 +25,7 @@
         "lastName": "Özcan"
       },
       {
-        "username": "customeruser",
+        "username": "customer",
         "password": "Scrap0102.",
         "email": "customeruser@scrapapp.com",
         "role": "Customer",
@@ -33,9 +33,9 @@
         "lastName": "Özcan"
       },
       {
-        "username": "stuffuser",
+        "username": "stuff",
         "password": "Scrap0102.",
-        "email": "customeruser2@scrapapp.com",
+        "email": "stuffuser@scrapapp.com",
         "role": "Stuff",
         "firstName": "Özgür",
         "lastName": "Özcan"
