--- a/scrapapp.webapi/appsettings.json
+++ b/scrapapp.webapi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteConnection" : "Data Source=shopDb",
+    "SqliteConnection" : "Data Source=../scrapapp.webui/db.sqlite3",
     "MySqlConnection":"",
     "MsSqlConnection":"server=.\\sqlexpress;database=shopappdb;integrated security=SSPI;"
   }
